...
    switch (this) {
      case TaskSort.closestToNow:
        return 'Closest to now';
      case TaskSort.earliestFirst:
        return 'Earliest first';
      case TaskSort.latestFirst:
        return 'Latest first';
      case TaskSort.recentlyUpdated:
        return 'Recently updated';
      case TaskSort.priorityHighToLow:
        return 'Priority high to low';
    }
  }
...
